Moved links above h1 on recipe pages. Renamed image files. Added images to recipe pages

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../index.html">Home</a>
-    <a href="../recipes/ramenTacos.html">Ramen Tacos</a>
-    <a href="../recipes/macNCheese.html">Mac N Cheese</a>
-    <a href="../recipes/pbj.html">Peaunut Butter Jelly</a>
-    <a href="../recipes/cheerios.html">Cheerios</a>
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../recipes/ramenTacos.html">Ramen Tacos</a></li>
+        <li><a href="../recipes/macNCheese.html">Mac N Cheese</a></li>
+        <li><a href="../recipes/pbj.html">Peaunut Butter Jelly</a></li>
+        <li><a href="../recipes/cheerios.html">Cheerios</a></li>
+    </ul>
 </body>
 
 </html>
