--- a/recipes/ramenTacos.html
+++ b/recipes/ramenTacos.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
-    <h1>Ramen Tacos</h1>
     <a href="../index.html">Home</a>
     <a href="../recipes/ramenTacos.html">Ramen Tacos</a>
     <a href="../recipes/macNCheese.html">Mac N Cheese</a>
     <a href="../recipes/pbj.html">Peaunut Butter Jelly</a>
     <a href="../recipes/cheerios.html">Cheerios</a>
+
+    <h1>Ramen Tacos</h1>
+    <img src="../images/ramenTacos.webp">
 </body>
 
 </html>
