--- a/recipes/cheerios.html
+++ b/recipes/cheerios.html
@@ -16,6 +16,19 @@
 
     <h1>Cheerios</h1>
     <img src="../images/cheerios.webp">
+    <h2>Description</h2>
+    <p>Description here. Describe the recipe</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Add ingredients here</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Steps here</li>
+    </ol>
+</body>
 </body>
 
 </html>
