--- a/recipes/ramenTacos.html
+++ b/recipes/ramenTacos.html
@@ -16,6 +16,18 @@
 
     <h1>Ramen Tacos</h1>
     <img src="../images/ramenTacos.webp">
+    <h2>Description</h2>
+    <p>Description here. Describe the recipe</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Add ingredients here</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Steps here</li>
+    </ol>
 </body>
 
 </html>
